--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h2>Sample Web Application To Deploy and Test. This project is made by Himanshu Joshi</h2>
+        <h2>Sample Web Application To Deploy and Test. This project is made by Himanshu Joshi. You are viewing the recent version of this file</h2>
         <br>
     <div> click <a href="SnoopServlet">Click to Invoke a SnoopServlet</a></div>
     <br>
